--- a/Explore/a-stg45/hk_mapping2.DTEMPLATE.meta.json
+++ b/Explore/a-stg45/hk_mapping2.DTEMPLATE.meta.json
@@ -17,7 +17,7 @@
         "value" : "@1"
       } ],
       "additionalInfo" : {
-        "description" : "",
+        "description" : "Desc",
         "contentType" : "JSON",
         "documentState" : "VALID"
       },
