--- a/Explore/a-stg45.Project.meta.json
+++ b/Explore/a-stg45.Project.meta.json
@@ -12,7 +12,7 @@
       "repoInfo" : null,
       "contextAttributes" : [ ],
       "additionalInfo" : {
-        "description" : "",
+        "description" : "asd",
         "contentType" : "Binary",
         "documentState" : "COMPLETE"
       },
